[package]
name = "sdr-file-rs"
license = "GPL-3.0-or-later"
version = "0.1.0"
edition = "2024"
rust-version = "1.85"

description = "File-backed SdrSource implementations: raw interleaved IQ and SigMF (Signal Metadata Format) recordings."

[dependencies]
sdr-source-rs = { git = "https://github.com/isaacbentley/sdr-source-rs.git", branch = "main" }
crossbeam = "0.8"
num-complex = "0.4"
anyhow = "1.0"
tracing = "0.1"
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"

[dev-dependencies]
tempfile = "3"
